--- a/project1/pom.xml
+++ b/project1/pom.xml
@@ -56,7 +56,7 @@
   </dependencies>
 
   <build>
-    <finalName>project1</finalName>
+    <finalName>ashok project</finalName>
     <sourceDirectory>src/java</sourceDirectory>
     <outputDirectory>target/classes</outputDirectory>
     <plugins>
